# seeing-is-not-sharing

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  dataset_card.md  pyproject.toml
prompts/: __init__.py  prompt_template.py  textual_map_information.md
prompts/fixtures/: q1ec1_m12_discrepancy_detail.txt  q1ec1_m12_landmark_names.txt
prompts/templates/: prompt-template-fillings.json  prompt_template.py
scripts/: __init__.py  _gmmt_transcripts.py  build_dataset.py  evaluate_predictions.py  reconstruct_contexts.py  render_prompts.py  vllm_yes_no_template.py
tests/: conftest.py  test_build_dataset.py  test_docs.py  test_evaluate_predictions.py  test_reconstruct_contexts.py  test_release_layout.py  test_render_prompts.py  test_vllm_yes_no_template.py
